--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsdom": "^22.1.0",
     "next": "14.0.2",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-query": "^3.39.3",
     "styled-components": "^6.1.1"
